--- a/application/templates/personas.html
+++ b/application/templates/personas.html
@@ -21,7 +21,8 @@
             </p>
             <p>
                 <label for="last_visit">letzter Besuch</label>
-                <input id="last_visit" type="datetime-local" style="border: 0px" disabled="false" value={{ last_visit }}>
+                <input id="last_visit" type="datetime-local" style="border: 0px" disabled="false"
+                       value={{ last_visit }}>
             </p>
             <p><label for="num_visits_today">Besuche heute: </label>
                 <input id="num_visits_today" type="number" style="border: 0px;" disabled="true"
